--- a/template/template.tex
+++ b/template/template.tex
@@ -5,6 +5,9 @@
 \usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{mathtools}
+\usepackage{amsmath}
+\usepackage{amssymb}
 
 % set page margins
 \usepackage[left=2cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
@@ -18,7 +21,7 @@
 % set some variable
 \newcommand{\Title}{$title$}
 \newcommand{\Modul}{$modul$}
-\newcommand{\Author}{\url{https://github.com/crydeb/summery}}
+\newcommand{\Author}{\url{https://github.com/crydeb/summary}}
 \newcommand{\Date}{\today}
 
 % set document properties
