added all questions from portman + puly

--- a/template/template.tex
+++ b/template/template.tex
@@ -23,6 +23,7 @@
 \newcommand{\Modul}{$modul$}
 \newcommand{\Author}{\url{https://github.com/crydeb/summary}}
 \newcommand{\Date}{\today}
+\setcounter{tocdepth}{2}
 
 % set document properties
 \title{\Title}
