--- a/template/template.tex
+++ b/template/template.tex
@@ -8,6 +8,7 @@
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{pdfpages}
 
 % set page margins
 \usepackage[left=2cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
